# rust-driver-cp2130

./: .travis.yml  40-cp2130.rules  Cargo.toml  README.md  build.rs
.cargo/: config  config.toml
.github/workflows/: rust.yml
examples/: ssd1306.rs
src/: cli.rs  device.rs  lib.rs  manager.rs  prelude.rs
tests/: integration.rs
