[package]
name = "driver-cp2130"
version = "1.0.0-alpha.1"
authors = ["Ryan Kurte <ryankurte@gmail.com>"]
description = "libusb based driver for the CP2130 USB-SPI bridge by Silicon Labs"
repository = "https://github.com/ryankurte/rust-driver-cp2130"
keywords = [ "driver", "cp2130", "usb", "spi", "embedded" ]
license = "MPL-2.0"
edition = "2018"

[features]
util = [ "structopt", "simplelog", "rand", "hex" ]
default = [ "util" ]

[dependencies]
libusb = "0.3"
libc = "0.2.66"
log = "0.4.8"
bitflags = "1.2.1"
byteorder = "1.3.2"
lazy_static = "1.4.0"
failure = "0.1.7"

[dependencies.embedded-hal]
version = "=1.0.0-alpha.2"

[dependencies.structopt]
version = "0.3.5"
optional = true

[dependencies.simplelog]
version = "0.7.4"
optional = true

[dependencies.hex] 
version = "0.4.0"
optional = true

[dependencies.rand] 
version = "0.7.2"
optional = true

[dev-dependencies]
ssd1306 = "0.3.1"
embedded-graphics = "0.6.2"
linux-embedded-hal = "0.3.0"

[[bin]]
name = "cp2130-util"
path = "src/cli.rs"
required-features = [ "util" ]

[patch.crates-io]
# Patch to e-h master for transactional SPI support, remove at v1.0.0-alpha.3
embedded-hal = { git = "https://github.com/rust-embedded/embedded-hal", branch = "master" }

# Patch to support better discovery of libusb, oh to remove this...
libusb-sys = { git = "https://github.com/cmsd2/libusb-sys/" }
