[package]
name = "driver-cp2130"
version = "1.0.0-alpha.2"
authors = ["Ryan Kurte <ryankurte@gmail.com>"]
description = "libusb based driver for the CP2130 USB-SPI bridge by Silicon Labs"
repository = "https://github.com/ryankurte/rust-driver-cp2130"
keywords = [ "driver", "cp2130", "usb", "spi", "embedded" ]
license = "MPL-2.0"
edition = "2018"

[features]
util = [ "structopt", "simplelog", "rand", "hex" ]
examples = []
default = [ "util" ]

[dependencies]
libc = "0.2.66"
log = "0.4.8"
bitflags = "1.2.1"
byteorder = "1.3.2"
lazy_static = "1.4.0"
failure = "0.1.7"
rusb = "0.6.5"

[dependencies.embedded-hal]
version = "1.0.0-alpha.5"

[dependencies.structopt]
version = "0.3.5"
optional = true

[dependencies.simplelog]
version = "0.9.0"
optional = true

[dependencies.hex] 
version = "0.4.2"
optional = true

[dependencies.rand] 
version = "0.8.0"
optional = true

[dev-dependencies]
ssd1306 = "0.5.0"
embedded-graphics = "0.6.2"
linux-embedded-hal = "0.3.0"

[[bin]]
name = "cp2130-util"
path = "src/cli.rs"
required-features = [ "util" ]

[[example]]
name = "cp2130-ssd1306"
path = "examples/ssd1306.rs"
# Temporarily disabled due to e-h v1/v2 flubs
required-features = [ "examples" ]
