[package]
name = "driver-cp2130"
version = "1.0.0"
authors = ["Ryan Kurte <ryankurte@gmail.com>"]
description = "libusb based driver for the CP2130 USB-SPI bridge by Silicon Labs"
repository = "https://github.com/ryankurte/rust-driver-cp2130"
keywords = [ "driver", "cp2130", "usb", "spi", "embedded" ]
license = "MPL-2.0"
edition = "2021"

[features]
util = [ "clap", "simplelog", "rand", "hex" ]
examples = []
default = [ "util" ]

[dependencies]
embedded-hal = { version = "1.0.0" }

libc = "0.2.66"
log = "0.4.8"
bitflags = "1.2.1"
byteorder = "1.3.2"
lazy_static = "1.4.0"
thiserror = "1.0.58"
rusb = "0.9.0"

clap = { version = "4.4.7", optional = true, features = [ "derive", "env" ] }
simplelog = { version = "0.9.0", optional = true }
hex = { version = "0.4.2", optional = true }
rand = { version = "0.8.0", optional = true }

[dev-dependencies]
ssd1306 = "0.8.4"
embedded-graphics = "0.8.1"
linux-embedded-hal = "0.4.0"
#embedded-hal-compat = "0.12.0"

[[bin]]
name = "cp2130-util"
path = "src/cli.rs"
required-features = [ "util" ]

[[example]]
name = "cp2130-ssd1306"
path = "examples/ssd1306.rs"
# Temporarily disabled due to e-h v1/v2 flubs
required-features = [ "examples" ]
